// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor plugins normalize-header-examples given scope and running normalization multiple times should avoid normalizing the same scope multiple times 1`] = `
Object {
  openapi: 3.1.0,
  paths: Object {
    /: Object {
      get: Object {
        responses: Object {
          200: Object {
            headers: Object {
              content-type: Object {
                examples: Object {
                  example1: Object {
                    value: 2,
                  },
                },
                schema: Object {
                  example: 2,
                  type: number,
                },
              },
            },
          },
        },
      },
    },
  },
  x-normalized: Array [
    /paths/~1/get/responses/200,
  ],
  x-normalized-header-examples: Array [
    /paths/~1/get/responses/200/headers/content-type,
  ],
}
`;

exports[`refractor plugins normalize-header-examples given scope to limit the normalization should limit the scope of normalization 1`] = `
Object {
  openapi: 3.1.0,
  paths: Object {
    /: Object {
      get: Object {
        responses: Object {
          200: Object {
            headers: Object {
              content-type: Object {
                examples: Object {
                  example1: Object {
                    value: 2,
                  },
                },
                schema: Object {
                  example: 2,
                  type: number,
                },
              },
            },
          },
          400: Object {
            headers: Object {
              content-type: Object {
                examples: Object {
                  example1: Object {
                    value: 2,
                  },
                },
                schema: Object {
                  example: 1,
                  type: number,
                },
              },
            },
          },
        },
      },
    },
  },
  x-normalized-header-examples: Array [
    /paths/~1/get/responses/200/headers/content-type,
  ],
}
`;
